# serialization

./: CMakeLists.txt  README.md  buffer.cpp  buffer.h  codegen.cpp  codegen.h  config.h  generator.cpp  generator.h  serialization.pro
code/: binary_base.h  json_base.h  xml_base.h
detail/: binary_generator.cpp  binary_generator.h  config.h  generator.cpp  generator.h  json_generator.cpp  json_generator.h  jsoncppgenerator.hpp  objects.h  objects.hpp  parser.h  xml_generator.cpp  xml_generator.h  xml_parser.h  xmlcppgenerator.hpp  xmlparser.hpp
include/: binary_base.h  json_base.h  serialization.hpp  xml_base.h
test/: CMakeLists.txt  test.cpp  test.xml.cpp  test.xml.h
test/binary/: CMakeLists.txt  buffer.cpp  test  test.cpp  test.h  test_binary.cpp
test/cpp/json/: CMakeLists.txt  test.h  test_json.cpp
test/cpp/xml/: CMakeLists.txt  test.cpp
test/json/: CMakeLists.txt  test  test.cpp  test_json.cpp
test/xml/: CMakeLists.txt  test  test.h  test_xml.cpp
